# BenchMark

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  PROTOCOL.md  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: deploy.yml
infra/seccomp/: bench-engine.json
infra/swarm/: README.md  docker-stack.yml
infra/terraform/: main.tf  outputs.tf  user_data.sh  variables.tf
sample-cpp/: Dockerfile
sample-engine/: Dockerfile  package-lock.json  package.json
sample-engine-cpp/: CMakeLists.txt
sample-engine-cpp/src/: main.cpp
sample-engine-node/src/: server.ts
sample-engine/src/: orderbook.ts  server.ts
services/api/: Dockerfile  package.json
services/api/src/: index.ts  queue.ts
services/api/src/routes/: leaderboard.ts  logs.ts  submit.ts  team.ts
services/fleet/: CMakeLists.txt
services/fleet/src/: main.cpp  order_gen.cpp  order_gen.h
services/frontend/: Dockerfile  index.html  next.config.js  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
services/frontend/.next/: trace
services/frontend/.next/server/: _error.js  server-reference-manifest.json  webpack-runtime.js
services/frontend/.next/server/app/: page.js  page_client-reference-manifest.js
services/frontend/.next/server/pages/: _error.js
services/frontend/.next/server/vendor-chunks/: @radix-ui.js  @swc.js  next.js
services/frontend/.next/static/chunks/: _error.js  app-pages-internals.js  webpack.js
services/frontend/.next/static/development/: _buildManifest.js
services/frontend/app/: globals.css  layout.tsx  page.tsx
services/frontend/src/: App.tsx
services/frontend/src/components/: Leaderboard.tsx
services/observability/: Dockerfile  package.json  tsconfig.json
services/observability/src/: index.ts
services/proxy/: Caddyfile
services/worker/: Dockerfile  package.json
services/worker/src/: bot.ts  botFleet.ts  docker.ts  index.ts  metrics.ts  orderGen.ts  redis.ts  referenceEngine.ts  runner.ts  score.ts  trading.ts
(+10 files in other folders)
